PJ-2007-12-07-0: RFE:       ARCo should support multi-clusters
                 Bugfix:    Error.jsp contains unbalanced tagError.jsp
                 Bugfix:    Reporting 'View' dropdown menu and 'Save Result' functionality is confusing  
                 Bugster:   6556389, 6638329
                 Issue:     2245,2439 
                 Changed:   reporting
                 Review:    JO,JG

AP-2007-12-05-0: Bugfix:      arco_read should be able to create synonyms 
                              instead of arco_write
                 Bugster:     6565635
                 Issue:       2282
                 Review:      JO

JO-2007-12-03-0: RFE:         DBW should use batch inserts
                 Bugster:     6566325
                 Issue:       2285
                 Bugfix:      DBWriter should not exit if there is a database connection error
                 Bugster:     6636466
                 Issue:       2438
                 Review:      RH

AP-2007-11-07-0: Bugfix:      o ju_exit_status should provide means to recognize 
                              the intermediate record
                              o fix of correction of usage summary for Oracle db
                 Bugster:     6621482
                 Review:      JO

AP-2007-11-06-0: Bugfix:     Added Wallclock Time example query for Postgresql db.

JO-2007-10-31-0: Bugfix:      Long running jobs cause incorrect usage summary from ARCo database
                 Bugster:     6618599
                 Issue:       2414
                 Review:      AP

AP-2007-10-31-0: Bugfix:      o Oracle, Postgres DWB should prompt for tablespace 
                              where indexes and tables should be created
                              o recompile views dependend on altered tables
                 Bugster:     6565821
                 Issue:       2283
                 Review:      JO

RD-2007-10-24-0: CVS          Created V61ARsnapshot3_TAG
--------------------------------------------------------
